--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,6 @@
 // Any other changes to the build config belong in rules.gradle, which
 // is used by projects that depend on Volley but define their own
 // tools versions across all dependencies to ensure a consistent build.
-//
-// Most users should just add this line to settings.gradle:
-//     include(":volley")
-//
-// If you have a more complicated Gradle setup you can choose to use
-// this instead:
-//     include(":volley")
-//     project(':volley').buildFileName = 'rules.gradle'
 
 buildscript {
     repositories {
@@ -20,6 +12,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
     }
 }
 
@@ -35,3 +29,5 @@ android {
 }
 
 apply from: 'rules.gradle'
+apply from: 'maven.gradle'
+apply from: 'bintray.gradle'
